--- a/src/components/menu-items/menu-items.style.scss
+++ b/src/components/menu-items/menu-items.style.scss
@@ -1,18 +1,4 @@
-.homepage {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px 80px;
-  }
-  
-  .directory-menu {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  
-  .menu-item {
+.menu-item {
     min-width: 30%;
     height: 240px;
     flex: 1 1 auto;
@@ -21,6 +7,7 @@
     justify-content: center;
     border: 1px solid black;
     margin: 0 7.5px 15px;
+    overflow: hidden;
   
     &:first-child {
       margin-right: 7.5px;
@@ -29,7 +16,20 @@
     &:last-child {
       margin-left: 7.5px;
     }
-  
+    &.large{
+      min-height: 380px;
+    }
+
+    .background-Image{
+      height: 100%;
+      width: 100%;
+      background-position: center;
+      background-size: cover;
+    }
+    .background-Image:hover{
+      transform: scale(1.1);
+      transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+    }
     .content {
       height: 90px;
       padding: 0 25px;
@@ -38,12 +38,21 @@
       align-items: center;
       justify-content: center;
       border: 1px solid black;
+      background-color: #fff;
+      opacity: .7;
+      text-transform: uppercase;
+      position: absolute;
+
+      &:hover{
+        opacity: .9;
+      }
   
       .title {
         font-weight: bold;
         margin-bottom: 6px;
         font-size: 22px;
         color: #4a4a4a;
+        margin-top: 0;
       }
   
       .subtitle {
