--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -20,11 +20,12 @@
   
       .option {
         padding: 10px 15px;
+        cursor: pointer;
       }
 
       a{
           text-decoration: none;
-          color: black;
+          color: black  ;
       }
     }
   }
