--- a/src/components/cart-dropdown/cart-dropdown.style.scss
+++ b/src/components/cart-dropdown/cart-dropdown.style.scss
@@ -21,5 +21,11 @@
     button {
       margin-top: auto;
     }
+    .empty-cart{
+      top: 45%;
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
   
